search bar gui problem solved when screen too small

--- a/src/components/Landing/searchbar.css
+++ b/src/components/Landing/searchbar.css
@@ -59,6 +59,11 @@ input:focus {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .searchIcon {
+    display: none;
+  }
+}
   
   input:focus {
     outline: none;
